# NHS-complain

./: .gitignore  README.md  app.py  client_secret_283226599024-sa3s53v60o5ff8h73bnisi1rouee0j9p.apps.googleusercontent.com.json  config.cfg  emails.py  forms.py  models.py  routes.py  task.db  users.db
.github/workflows/: pylint.yml
TheNhsComplain/: pyproject.toml
TheNhsComplain/thenhscomplain/: readme
TheNhsComplain/thenhscomplain/flaskr/: DB-setup-dev.sql  SQl script.sql  app.py  forms.py  models.py  routes.py  sql2.sql  task.db
TheNhsComplain/thenhscomplain/flaskr/templates/: ContactInfomation.html  ContactInformation.html  Service-lookup.html  add.html  base.html  dashboard.html  dateofbirth.html  details.html  index.html  search_results.html  start.html
TheNhsComplain/thenhscomplain/flaskr/templates/admin/: index.html
TheNhsComplain/thenhscomplain/flaskr/templates/auth/: login.html  register.html
flaskr/: app.py  forms.py  models.py  routes.py
flaskr/templates/: add.html  base.html  dashboard.html
flaskr/templates/auth/: login.html
templates/: add.html  base.html  dashboard.html  email-verified.html  email.html  index.html  login.html  register.html
