[tool.poetry]
name = "thenhscomplain"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
Flask-Mail = "^0.9.1"
Flask-WTF = "^1.1.1"
Flask-Login = "^0.6.2"
wtforms = "^3.0.1"
flask-bcrypt = "^1.0.1"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
